--- a/CalTest/Base.lproj/LaunchScreen.storyboard
+++ b/CalTest/Base.lproj/LaunchScreen.storyboard
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,18 +15,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="hoZ-dH-T70">
-                                <rect key="frame" x="17" y="151" width="343" height="253"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="HhC-E0-Shq">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.0039215686274509803" green="0.70196078431372544" blue="0.039215686274509803" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="hoZ-dH-T70" secondAttribute="bottom" constant="263" id="CPP-f7-6Fh"/>
-                            <constraint firstItem="hoZ-dH-T70" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="1" id="SNE-o4-uCH"/>
-                            <constraint firstItem="hoZ-dH-T70" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="131" id="tKM-2g-C8x"/>
-                            <constraint firstItem="hoZ-dH-T70" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailingMargin" constant="1" id="vjV-LL-9ZZ"/>
+                            <constraint firstItem="HhC-E0-Shq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="143" id="0Qa-ru-p64"/>
+                            <constraint firstItem="HhC-E0-Shq" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="7o6-JY-XQ5"/>
+                            <constraint firstItem="HhC-E0-Shq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="FaE-wL-SFe"/>
+                            <constraint firstItem="HhC-E0-Shq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="O8e-6j-rb5"/>
+                            <constraint firstItem="HhC-E0-Shq" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="q1D-vt-Syb"/>
+                            <constraint firstAttribute="trailing" secondItem="HhC-E0-Shq" secondAttribute="trailing" id="rsR-tw-kjr"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -39,6 +37,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="logo" width="109" height="192"/>
+        <image name="logo" width="512" height="512"/>
     </resources>
 </document>
